--- a/vite-projeto/src/index.css
+++ b/vite-projeto/src/index.css
@@ -3,7 +3,7 @@ line-height: 1.5;
 font-weight: 400; 
 color-scheme: light dark;
 color: rgba(255, 255, 255, 0.87); 
-background: linear-gradient(135deg, #6a11cb, #2575fc); font-synthesis: none; 
+font-synthesis: none; 
 text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 
 a {
@@ -15,12 +15,16 @@ a:hover {
   color: #535bf2;
 }
 
+html, body, #root { height: 100%; }
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: linear-gradient(135deg, #6a11cb, #2575fc);
+  background-attachment: fixed;
 }
 
 h1 {
@@ -50,7 +54,6 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
