--- a/vite-projeto/src/index.css
+++ b/vite-projeto/src/index.css
@@ -20,9 +20,11 @@ html, body, #root { height: 100%; }
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  flex-direction: column;
+  justify-content: center; /* vertical */
+  align-items: center;     /* horizontal */
   min-height: 100vh;
+  min-width: 320px;
   background: linear-gradient(135deg, #6a11cb, #2575fc);
   background-attachment: fixed;
 }
