--- a/vite-projeto/src/pages/Contato/contato.css
+++ b/vite-projeto/src/pages/Contato/contato.css
@@ -6,10 +6,27 @@
 }
 
 h2{
-    color: rgb(114, 91, 247);
+    color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin-top:30px;
     font-size: 40px;
 
+}
+
+.contato-card {
+  border-radius: 12px;      
+  padding: 16px;            
+  margin-bottom: 16px;       
+  background-color: #ffffffee;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1); 
+}
+
+
+.contato-card p {
+  font-size: 16px;
+  color: #000000;
+  line-height: 1.5;
+  margin: 8px 0;
+  text-align: center;
 }
